--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="Navbar.css" type="text/css" rel="stylesheet" />
   <link href="Login.css" type="text/css" rel="stylesheet" />
+  <link href="Music.css" type="text/css" rel="stylesheet" />
   <link rel="icon" type="image/x-icon" sizes="180x180" href="Images/favicon-32x32.png"/>
   <script src="https://cdn.jsdelivr.net/npm/react-fontawesome@1.7.1/lib/index.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
